laundary service merged
